Extract task collection into TaskList
Introduce a TaskList class to own the ArrayList of tasks and common list operations such as add, delete, mark, unmark, size, lookup, and date sorting. This removes raw ArrayList manipulation from DowntownGurl and gives the task collection a clearer home before extracting parser logic.

Update Ui to display a TaskList and update Storage to save any iterable collection of tasks, preserving the existing save rollback behavior and user-facing command output.